--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                   <div class="tarjeta__header mb-3">Información del programa</div>
                   <div class="tarjeta__body mb-4">
                     <span class="d-block mb-2">Complementaria</span>
-                    <h1>Desarrollo frontend web con react.js</h1>
+                    <h1>Desarrollo <em>fron-tend</em> web con React.js</h1>
                   </div>
                   <div class="tarjeta__action">
                     <button class="boton video-btn" type="button" data-bs-toggle="modal"
